# Pocket-Racing

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: client.yml  deploy.yml  server.yml
client/: .gitattributes  env.tres  export_presets.cfg  project.godot
client/assets/models/: kenney_race_car.glb.import  race-future.glb.import  race.glb.import  (+3 more)
client/scenes/: editor.tscn  game.tscn  label.tscn  opponent.tscn  player.tscn
client/scripts/: bindings.gd  bindings.gd.uid  camera.gd  camera.gd.uid  decor_builder.gd  decor_builder.gd.uid  drift_bar.gd  drift_bar.gd.uid  environment_builder.gd  environment_builder.gd.uid  game.gd  game.gd.uid  locale.gd  locale.gd.uid  network.gd  network.gd.uid  player.gd  player.gd.uid  start_lights.gd  start_lights.gd.uid  touch_controls.gd  touch_controls.gd.uid  track_cache.gd  track_cache.gd.uid  track_loader.gd  track_loader.gd.uid  ui.gd  ui.gd.uid
client/shaders/: menu_bg.gdshader  menu_bg.gdshader.uid
client/styles/: blue.tres  main_theme.tres  on_focus_stylebox.tres
client/tests/: run_tests.gd  run_tests.gd.uid
scripts/: export-web.ps1  export-web.sh  fetch-addons.ps1  fetch-addons.sh  gen_aurora.py  gen_circuit_simple.py  run-all.ps1  run-all.sh  run-tests.ps1  run-tests.sh  spawn_intersection_check.py
server/: Cargo.toml
server/src/: error.rs  lib.rs  lobby.rs  protocol.rs  run.rs  track.rs  tracks_dir.rs
server/tests/: integration.rs
server/tracks/: aurora_circuit.json  circuit_one.json  circuit_simple.json  circuit_test.json  circuit_three.json  circuit_two.json  the_room.json
(+51 files in other folders)
