[package]
name = "star-racer-server"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[[bin]]
name = "server"
test = false
doctest = false

[[bin]]
name = "bots"
test = false
doctest = false

[dependencies]
anyhow = "1.0.102"
cgmath = "0.18.0"
chrono = "0.4.45"
colored = "3.1.1"
crossbeam = {version = "0.8.4", features = ["crossbeam-channel"]}
env_logger = "0.11.10"
futures-util = "0.3.32"
log = "0.4.32"
nalgebra = "0.35.0"
rand = "0.10.1"
rapier3d-f64 = "0.33.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = {version = "1.52.3", features = ["full"]}
tokio-tungstenite = "0.29.0"
tungstenite = "0.29.0"

# Windows-only: timeBeginPeriod() for the high-resolution timer tweak in
# src/bin/server.rs (gated by #[cfg(windows)]). Was previously pulled in
# transitively by the now-removed editor/bevy stack.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Media"] }
